--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -310,3 +310,4 @@
 @import 'signup/validation-fieldset/style';
 @import 'vip/vip-logs/style';
 @import 'signup/steps/dss/style';
+@import 'signup/steps/mlb-theme-selection/style';
