updated jetpack security screen
fixed jp protect activate buttons

moved loader into sectionheader

changed writing settings to sectionheader

changed discussion settings to sectionheader

changed analytics settings to sectionheader

fixed jp protect activate buttons

moved loader into sectionheader

--- a/client/my-sites/site-settings/style.scss
+++ b/client/my-sites/site-settings/style.scss
@@ -216,6 +216,13 @@
 
 }
 
+.jetpack-protect__deactivate,
+.jetpack-protect__edit-settings,
+.jetpack-scan__deactivate,
+.jetpack-monitor__deactivate {
+	margin-right: 8px;
+}
+
 .site-settings__blog-address-container {
 	margin: 0 -24px;
 	padding: 24px 24px 16px 24px;
