added divider lines and remixed the general settings a bit

--- a/client/my-sites/site-settings/style.scss
+++ b/client/my-sites/site-settings/style.scss
@@ -228,7 +228,7 @@
 	margin-right: 8px;
 }
 
-.site-settings__blog-address-container {
+.has-divider {
 	margin: 0 -24px;
 	padding: 24px 24px 16px 24px;
 	border: 1px lighten( $gray, 30% ) solid;
