--- a/client/components/plans/plan-price/style.scss
+++ b/client/components/plans/plan-price/style.scss
@@ -28,7 +28,7 @@
 .plans-compare {
 	.plan-price {
 		font-size: 10px;
-		padding: 1em 0;
+		padding: .25em 0;
 
 		@include breakpoint( ">480px" ) {
 			font-size: 12px;
@@ -78,6 +78,11 @@
 	.plans-compare {
 		.plan-header .plan-price {
 			font-size: 16px;
+
+			.plan-price__billing-period {
+				display: inline;
+				margin-left: 3px;
+			}
 		}
 	}
 }
