--- a/assets/stylesheets/shared/_livechat.scss
+++ b/assets/stylesheets/shared/_livechat.scss
@@ -386,7 +386,7 @@
 }
 
 #habla_window_div #habla_conversation_div {
-	padding:6px 10px 0;
+	padding:6px 10px 10px;
 	margin:-6px -10px 0;
 }
 
@@ -489,8 +489,7 @@
 	background:0 0;
 	color:#000;
 	padding:0;
-	margin:0 0 0 20px;
-	text-indent:-20px;
+	margin: 8px 0 0 0;
 	overflow:visible;
 }
 
@@ -841,6 +840,51 @@
 	font-style: italic;
 	margin: 1em 0;
 	display: block;
+}
+
+#habla_conversation_div .habla_conversation_text_span {
+	display: block;
+	margin-left: 48px;
+}
+
+#habla_conversation_div .hbl_pal_local_fg,
+#habla_conversation_div .hbl_pal_remote_fg {
+	font: 14px/20px $sans;
+	font-weight: bold;
+	color: $gray-dark;
+	text-transform: capitalize;
+	display: inline-block;
+	white-space: nowrap;
+}
+
+#habla_conversation_div .habla_conversation_p_item:not(:first-child) .hbl_pal_local_fg,
+#habla_conversation_div .habla_conversation_p_item:not(:first-child) .hbl_pal_remote_fg {
+	margin-top: 16px;
+}
+
+#habla_conversation_div .olrk_avatar {
+	display: none;
+}
+
+#habla_conversation_div .gravatar {
+	width: 32px;
+	height: 32px;
+	line-height: 32px;
+	border-radius: 50%;
+	margin-bottom: -20px;
+	margin-right: 16px;
+}
+
+#habla_conversation_div .staff-label {
+	border-radius: 2px;
+	background-color: $blue-medium;
+	color: $white;
+	font: 11px/14px $sans;
+	font-weight: bold;
+	text-transform: uppercase;
+	display: inline-block;
+	margin-left: 3px;
+	padding: 1px 4px;
 }
 
 @-webkit-keyframes pulse {
