--- a/server/pages/index.jade
+++ b/server/pages/index.jade
@@ -75,8 +75,7 @@ html(lang=lang, dir=isRTL ? 'rtl' : 'ltr', class=isFluidWidth ? 'is-fluid-width'
 					span(class=['environment', 'is-docs'])
 						a(href=devDocsURL title='DevDocs') docs
 
-		if 'development' !== env
-			script( src='/calypso/catch-js-errors.min.js' )
+		script( src=catchJsErrors )
 
 		script.
 			(function() {
